# personal-tools-bot

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  requirements.txt
bot/: main.py  master_tools.py  search.py  tmdb_search.py
db/: db_query.py  get_data.py  parse_json.py
search/: summarize_spacy.py
src/: _locations.py  main.py
src/bot/: master_tools.py  tmdb_search.py  tokopedia_search.py
src/db/: db_query.py  get_data.py  parse_json.py
src/msg_replace/: replace_main.py  twitter_replace.py  ytvid_replace.py
src/search/: _locations.py  get_search_result.py  summarize_spacy.py
src/steam_search/: _prep.py  constants.py  get_request.py  parse_html.py  search_game.py
