[project]
name = ""
version = ""
description = ""
authors = [
    {name = "heko", email = "91366057+hkohko@users.noreply.github.com"},
]
dependencies = [
    "tqdm==4.65.0",
    "python-dotenv==1.0.0",
    "aiohttp==3.8.5",
    "beautifulsoup4==4.12.2",
    "spacy==3.6.1",
    "lxml==4.9.3",
    "httpx==0.25.0",
    "pre-commit>=3.5.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
